# HAN-ISE-P-BestFit

./: .gitignore
doc/: Plan van aanpak  Plan van aanpak.md
doc/functional_design/: BestFitCDM.cdm  BestFitUCD.asta  Functioneel Ontwerp.md
doc/installation_guide/: Installatiehandleiding.md
doc/meetings/: NotulenAssessmentPvA.md  NotulenInterview1.md  NotulenInterview2.md  NotulenInterview3.md  NotulenInterview4.md
doc/meetings/preparation/: VoorbereidingInterview1.md
doc/research/: Elaboratie Onderzoek.md
doc/technical_design/: ArchitecturalOverview.asta  BestFitPDM.pdm  Technisch Ontwerp.md
doc/test_plan/: Testplan.md
doc/test_report/: Testrapport.md
doc/test_report/coverage/: .gitignore  RunSQLCover.ps1
doc/test_report/results/: TestResults.ps1
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run-init.sh
docker/scripts/: 000_create_db.sql  001_create_test_db.sql  002_create_db_login_users.sql  002_create_hist.sql  003_add_hist_procedures.sql  003_insert.sql  004_add_hist_procedures_tests.sql  006_run_hist_procedures.sql  007_insert.sql  008_create_staging_area_user.sql
docker/scripts/procedure_tests/: test_addMember.sql  test_assignEmployee.sql  test_bookMachine.sql  test_bookSquashRoom.sql  test_cancelGroupClass.sql  (+16 more)
staging_area/: main.py
staging_area/bestfit/: .coverage  .gitignore  __init__.py  pyproject.toml  test_output.txt
staging_area/bestfit/src/bestfit/: __init__.py  bestfit.py
staging_area/bestfit/tests/: test_bestfit.py
staging_area/prototype/: cacheReservations.py  generateTestData.py  getPersonalRoster.py
(+43 files in other folders)
