[tool.poetry]
name = "bestfit"
version = "1.0.0"
description = "The staging area of the Best Fit gym"
authors = ["ISE B1"]

[tool.poetry.dependencies]
python = "3.11"
python-dateutil = "2.8.2"
redis = "4.5.5"
pandas = "2.0.1"
pyodbc = "4.0.34"
SQLAlchemy = "2.0.15"
Faker = "18.9.0"

[tool.poetry.dev-dependencies]
pytest = "7.3.1"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
